# covscript-zip

./: .gitignore  CMakeLists.txt  README.md  read.csc  test.cpp  test.csc  write.csc  zip.cpp
csbuild/: zip.json
include/: miniz.h  optional.hpp  zip.hpp
zip/: zip.hpp
